refactor: a palette character resolves to a typed entry (#53, 53a)
CompiledPalette stored Object and recovered the type with instanceof at twelve
lookups. That is exactly how isSimple rotted: it tested `instanceof Character`
against a map holding BlockState or BlockState[], matching neither, so the
bulk-fill fast path behind it was dead for as long as anyone had been reading
the code (#33) - and nothing said so.

`sealed interface Entry { Simple, Weighted }` cannot be wrong about which cases
exist, and every lookup is now a switch the compiler checks. The untyped
boundary is where it belongs: `Palette.PE.blocks()` is still an Object, and the
three `instanceof` left in this file are the compile-time step that turns it
into an Entry, once, rather than at every block placed.

Three things fall out of the typing rather than being done separately:

  - `get(char, RandomSource)` loses its catch-and-log-and-return-null. It was
    defending against the unchecked cast to BlockState[] - on the path that
    resolves every block of every part - and there is nothing left to catch.
  - `isMatch` on an undefined character was a NullPointerException, because it
    cast a null to BlockState[]. It answers false.
  - A PE holding something that is neither a block, a weighted list nor a
    character reference used to be stored and left to fail its cast later, from
    a worldgen worker mid-part. The sealed type has nowhere to put it, so it is
    refused at compile time with a message naming the class. Unreachable today:
    Palette only ever builds those three.

Also adds an ASCII index beside the map. The map stays the source of truth; the
128-entry array is what `generatePart` hits once per block, where an array index
beats hashing a boxed Character.

Measured on runDigestCheckAvoid (625 chunks, seed 135132278163449878):

  before  ms=24367  chunksPerSec=33.5  meanUs=4679.5  allocMiB=9963
  after   ms=23764  chunksPerSec=34.3  meanUs=4385.2  allocMiB=9623

~3% fewer allocated by